fixed overflow problem

--- a/src/assets/css/newindex.css
+++ b/src/assets/css/newindex.css
@@ -35,9 +35,14 @@ a {
 body {
   background: #ffffff;
   color: #000000;
-  overflow-x: hidden;
+  position: relative;
   max-width: 100vw;
   margin: 0;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 .App {
